package edu.hitsz.factory;

public class BossFactory {
}
