package edu.hitsz.factory;

import edu.hitsz.basic.AbstractFlyingObject;

public interface Factory {

    AbstractFlyingObject create();
}
